--- a/tagsdescriptions/src/index.css
+++ b/tagsdescriptions/src/index.css
@@ -688,3 +688,17 @@ border: 1px solid #0099FF;
   border-top-right-radius: 0.25rem;
   border-bottom-right-radius: 0.25rem;
 }
+
+input[type="file"] {
+  display: none;
+}
+.custom-file-upload {
+  border: 1px solid #ccc;
+  display: inline-block;
+  padding: 6px 12px;
+  cursor: pointer;
+}
+
+.file-preview {
+margin: 0 10px;
+}
