--- a/tagsdescriptions/src/index.css
+++ b/tagsdescriptions/src/index.css
@@ -763,7 +763,38 @@ input[type="file"] {
 }
 
 .file-preview {
-margin: 0 10px;
+  margin: 0 10px;
+}
+
+/* process files */
+.custom-file-input{
+  display:inline !important;
+  width: 100%;
+}
+.custom-file-input::-webkit-file-upload-button {
+  visibility: hidden;
+  
+}
+.custom-file-input::before {
+  content: 'Seleccionar archivo';
+  display: inline-block;
+  background: linear-gradient(top, #f9f9f9, #e3e3e3);
+  border: 1px solid #999;
+  border-radius: 3px;
+  padding: 5px 8px;
+  outline: none;
+  white-space: nowrap;
+  -webkit-user-select: none;
+  cursor: pointer;
+  text-shadow: 1px 1px #fff;
+  font-weight: 700;
+  font-size: 10pt;
+}
+.custom-file-input:hover::before {
+  border-color: black;
+}
+.custom-file-input:active::before {
+  background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
 }
 
 /* latin-ext */
