--- a/tagsdescriptions/src/index.css
+++ b/tagsdescriptions/src/index.css
@@ -1089,22 +1089,22 @@ tr{
   width: 100%;
 }
 
-.device_table th{
+th{
   /* background-color: #a3a3d9; */
   color:white;
   background-color:  var(--gris3);
 }
-.device_table tr:last-child td:first-child {
+tr:last-child td:first-child {
   border-bottom-left-radius: 10px;
 }
 
-.device_table tr:last-child td:last-child {
+tr:last-child td:last-child {
   border-bottom-right-radius: 10px;
 }
-.device_table th:first-child {
+th:first-child {
   border-top-left-radius: 10px;
 }
-.device_table th:last-child {
+th:last-child {
   border-top-right-radius: 10px;
 }
 
