--- a/tagsdescriptions/src/index.css
+++ b/tagsdescriptions/src/index.css
@@ -481,12 +481,17 @@ aside  {
   margin-top: 2rem;
   display: block;
   opacity: .7;
+  margin-right: 2rem;
+  cursor:pointer;
 }
 
 .link-menu-div {
   margin-top: 100%;
 }
-
+.link-arq-div {
+  margin-top: 0%;
+  display:flex;
+}
 .alerta {
   position: fixed;
   top: 0;
@@ -1159,6 +1164,7 @@ th:last-child {
 /*Architecture */
 .img_architecture_node{
   max-width: 220px;
+  
 }
 .img_architecture_device{
   max-width: 50px;
@@ -1168,19 +1174,23 @@ th:last-child {
 }
 .architecture_node_rackroom{
   color:#00648b;
-  margin:1.5px
+  margin:1.5px;
+  width: 100%;
 }
 .architecture_node_recovery{
   color:#5e0000;
-  margin:1.5px
+  margin:1.5px;
+  width: 100%;
 }
 .architecture_node_dryer{
   color:#383238;
-  margin:1.5px
+  margin:1.5px;
+  width: 100%;
 }
 .architecture_node_fiber{
   color:#00831c;
-  margin:1.5px
+  margin:1.5px;
+  width: 100%;
 }
 
 .architecture_node_div{
@@ -1190,20 +1200,14 @@ th:last-child {
   margin: 5px;
 }
 
-.architecture_device_CF9{
-  color:#00648b;
-  margin:1.5px
-}
-.architecture_device_C300{
-  color:#00831c;
-  margin:1.5px
-}
-.architecture_device_PGM{
-  color:#5e0000;
-  margin:1.5px
+.div_buttons_architecture input{
+  width: 100%;
 }
 
-
+.div_buttons_architecture{
+  display: flex;
+  justify-content: space-between;
+}
 
 /**************************/
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}
