--- a/tagsdescriptions/src/index.css
+++ b/tagsdescriptions/src/index.css
@@ -1291,10 +1291,14 @@ th:last-child {
 .div_buttons_architecture input{
   width: 100%;
 }
-
 .div_buttons_architecture{
   display: flex;
   justify-content: space-between;
+}
+
+.div_buttons_architecture_devices{
+  display: grid;
+  grid-template-rows: repeat(2, auto); 
 }
 
 
@@ -1307,3 +1311,55 @@ th:last-child {
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}
 /*# sourceMappingURL=normalize.min.css.map */
 
+/* SLIDE IMAGENES GABINETE*/
+.img_contenedor{
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2rem 2rem;
+}
+/*.img_active{
+  border: 2px solid #01db9b;
+  transform: scale(1.3);
+  transition: all 300ms;
+}*/
+.img_slideshow{
+  /*position: relative;
+  width: 100%;
+  justify-content: center;*/
+}
+.img_mainImg{
+  transition: all 500ms;
+}
+.img_mainImg:hover { /*para el zoom: https://www.upbeatcode.com/react/how-to-implement-zoom-image-in-react/*/
+  transform: scale(1.5);
+}
+.img_actions{
+  padding: 2rem;
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.img_action button{
+  background: #0000003d;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  margin: 5px;
+  border-radius: 15px;
+  padding-top: 5px;
+}
+
+.Img_action button:active{
+  background: #000000a2;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  margin: 5px;
+  border-radius: 15px;
+  padding-top: 5px;
+}
