--- a/tagsdescriptions/src/index.css
+++ b/tagsdescriptions/src/index.css
@@ -518,6 +518,29 @@ aside  {
     width: 95%;
     background-color: var(--blanco);
     border-radius: 1rem;
+} 
+.contenedor-form-keypad {
+    padding: 5rem 3rem;
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+    max-width: 500px;
+    width: 95%;
+    background-color: var(--blanco);
+    border-radius: 1rem;
+} 
+
+
+@media (max-height: 700px)  {
+    .contenedor-form-keypad{
+      width: 90%; 
+      height: 80%; 
+      overflow-y: scroll;
+      
+    }
+    .contenedor-form-keypad::-webkit-scrollbar-thumb {
+    background: #ccc;
+    border-radius: 4px;
+}
 }
 
 .contenedor-form-connections {
